fdo#42405: remove this, nowadays MenuItemAllowed disables menu entries

since c4461665bd030a555a8b7ffa5bd6717cfb787b9d m_bCanBeCustomized = false
will lead to toolbar locking, but we don't want this, indeed.

Change-Id: I42f16a017c7f1cf6e8321c7fe26c027ec79c7953